--- a/docker/docker-compose-mysql.yml
+++ b/docker/docker-compose-mysql.yml
@@ -2,12 +2,16 @@ version: '3.7'
 
 services:
   mysql:
-    build:
-      context: ./Dockerfiles/mysql
+    image: mysql:latest
     container_name: mysql_server
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: "MySQL123"
+      MYSQL_DATABASE: "transaction_isolation"
+      MYSQL_ROOT_PASSWORD: "admin"
     volumes:
-      - ./mysql_data:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
+
+volumes:
+  mysql_data:
+    driver: local
