--- a/docker/docker-compose-sqlserver.yml
+++ b/docker/docker-compose-sqlserver.yml
@@ -2,14 +2,13 @@ version: '3.7'
 
 services:
   mssql:
-    build:
-      context: ./Dockerfiles/sql_server
+    image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: sql_server
-    user: "user:user"
     ports:
       - "1433:1433"
     environment:
-      SA_PASSWORD: "admin"
+      SA_PASSWORD: "Admin987"
       ACCEPT_EULA: "Y"
     volumes:
-      - ./mssql_data:/var/opt/mssql     
+      - ./mssql_data:/var/opt/mssql
+    #sudo chown 10001:10001 ./mssql_data
